# mlLib

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: linreg.h
src/: linreg.cpp  main.cpp
tests/: linreg_data_generator.py
